src/components/Header/Header.scss
header {
    padding: 1rem 0 0;
    border-bottom: 2px solid var(--color-yellow);

    .header {
        display: flex;
        justify-content: space-between;
        gap: 2rem;
        flex-wrap: wrap;
    
        &-logo {
            display: flex;
            gap: 1rem;
            align-items: center;
    
            &-title {
                display: flex;
                flex-wrap: wrap;
                gap: 0.5rem;
                color: var(--color-yellow);
                font-weight: 700;
                font-size: var(--font-md);
    
                &-username {
                    color: var(--color-white);
                }
            }
        }

        .secondary-nav {
            display: flex;
            gap: 2rem;
            color: var(--color-yellow);

            &-menu {
                display: inline-flex;
                position: relative;

                &-icon {
                    display: inline-flex;
                    align-items: center;
                    gap: 8px;

                    .icon-container > svg {
                        width: 16px;
                    }
    
                    &.has-notification > span::after {
                        content: '';
                        display: inline-block;
                        border-radius: 999px;
                        background: var(--color-blue);
                        width: 8px;
                        height: 8px;
                        vertical-align: top;
                    }

                    & + .secondary-nav-menu-submenu {

                        a > div {
                            display: flex;
                            gap: 8px;
                        }
                    }

                    &:focus + .secondary-nav-menu-submenu {
                        display: block;
                    }
                }
    
                &-submenu {
                    display: none;
                    position: absolute;
                    top: 125%;
                    right: 0;
                    width: max-content;
                    background: var(--grey-5);
                    border: 1px solid var(--grey-50);

                    &:hover,
                    &:active,
                    &:focus {
                        display: block;
                    }

                    &.notifications-submenu {
                        .notify-block {
                            border: 1px solid var(--grey-50);

                            &:hover,
                            &:focus,
                            &:active {
                                background: var(--grey-10);
                                border: 1px solid;
                            }
                        }
                    }

                    &.create-submenu {
                        a {
                            display: flex;
                            justify-content: space-between;
                            align-items: center;
                            gap: 2rem;
                            padding: 20px;
                            color: var(--color-white);
                            border: 1px solid var(--grey-50);

                            & > div > .icon-container > svg {
                                width: 12px;
                            }
                            
                            & > .icon-container > svg  {
                                width: 16px;
                                height: 0;
                            } 

                            &:hover,
                            &:focus,
                            &:active {
                                color: var(--color-blue);
                                background: var(--grey-10);
                                border: 1px solid;

                                & > .icon-container > svg {
                                    height: auto;
                                }
                            }
                        }
                    }
                }
            }

        }
    }
    
    .primary-nav {
        ul {
            display: flex;
            gap: 2rem;
            overflow-x: scroll;

            a {
                color: var(--color-yellow);
                font-weight: 500;
                padding: 2rem 0;
                white-space: nowrap;

                &:hover, &:focus, &.active {
                    border-bottom-color: var(--color-yellow);
                    border-bottom-width: 4px;
                }
            }
        }
    }
}

